--- a/subfiles/part_02.tex
+++ b/subfiles/part_02.tex
@@ -51,10 +51,10 @@ For a given initial condition $X_0=x_0$, a trajectory of the ODE is recovered vi
 \begin{theorem}[Flow existence and uniqueness]
 \label{thm:ode_existence_and_uniqueness}
 If $u:\R^d\times[0,1]\to\R^d$ is continuously differentiable with a bounded derivative, then the ODE in \eqref{e:flow} has a unique solution given by a flow $\psi_t$. In this case, $\psi_t$ is a \themebf{diffeomorphism} for all $t$, i.e. $\psi_t$ is continuously differentiable with a continuously differentiable inverse $\psi_t^{-1}$.
-\end{theorem}
-Note that the assumptions required for the existence and uniqueness of a flow are almost always fulfilled in machine learning, as we use neural networks to parameterize $u_t(x)$ and they always have bounded derivatives. Therefore, \cref{thm:ode_existence_and_uniqueness} should not be a concern for you but rather good news: \textbf{flows exist and are unique solutions to ODEs in our cases of interest.} A proof can be found in \citep{perko2013differential,coddington1956theory}.
 
 如果$u:\R^d\times[0,1]\to\R^d$是连续可微的且具有有界导数，那么\eqref{e:flow}中的ODE有由流$\psi_t$给出的唯一解。在这种情况下，$\psi_t$对于所有$t$都是\themebf{微分同胚}，即$\psi_t$是连续可微的，且具有连续可微的逆$\psi_t^{-1}$。
+\end{theorem}
+Note that the assumptions required for the existence and uniqueness of a flow are almost always fulfilled in machine learning, as we use neural networks to parameterize $u_t(x)$ and they always have bounded derivatives. Therefore, \cref{thm:ode_existence_and_uniqueness} should not be a concern for you but rather good news: \textbf{flows exist and are unique solutions to ODEs in our cases of interest.} A proof can be found in \citep{perko2013differential,coddington1956theory}.
 
 注意，在机器学习中，流的存在性和唯一性所需的假设几乎总是满足的，因为我们使用神经网络来参数化$u_t(x)$，而它们总是具有有界导数。因此，\cref{thm:ode_existence_and_uniqueness}不应该是您担心的问题，而应该是好消息：\textbf{在我们感兴趣的情况下，流存在且是ODEs的唯一解。}证明可以在\citep{perko2013differential,coddington1956theory}中找到。
 
@@ -69,6 +69,7 @@ Note that the assumptions required for the existence and uniqueness of a flow ar
     \end{tabular}
     \caption{A flow $\psi_t:\Real^d\too \Real^d$ (red square grid) is defined by a velocity field $u_t :\Real^d\too\Real^d$ (visualized with blue arrows) that prescribes its instantaneous movements at all locations (here, $d=2$). We show three different times $t$. As one can see, a flow is a diffeomorphism that "warps" space. Figure from \citep{lipman2024flow}.}
     \label{fig:flow}
+    {流$\psi_t:\Real^d\too \Real^d$（红色方格网格）由速度场$u_t :\Real^d\too\Real^d$（用蓝色箭头可视化）定义，该速度场规定了在所有位置的瞬时运动（这里$d=2$）。我们展示了三个不同的时间$t$。如可以看到的，流是一个"扭曲"空间的微分同胚。图来自\citep{lipman2024flow}。}
 \end{figure}
 
 \begin{examplebox}[Linear Vector Fields]
@@ -144,16 +145,16 @@ where $\psi_t^\theta$ describes the flow induced by $u_t^\theta$. Note however: 
 其中$\psi_t^\theta$描述由$u_t^\theta$诱导的流。但是请注意：尽管它被称为\themeit{流模型}，\textbf{神经网络参数化的是向量场，而不是流}。为了计算流，我们需要模拟ODE。在\cref{alg:sampling_flow_model}中，我们总结了如何从流模型采样的过程。
 
 \begin{algorithm}[h]
-\caption{Sampling from a Flow Model with Euler method}
+\caption{Sampling from a Flow Model with Euler method / 使用欧拉方法从流模型采样}
 \label{alg:sampling_flow_model}
 \begin{algorithmic}[1]
-\REQUIRE Neural network vector field $u_t^\theta$, number of steps $n$
-\STATE Set $t=0$
-\STATE Set step size $h=\frac{1}{n}$
-\STATE Draw a sample $X_0\sim \pinit$
+\REQUIRE Neural network vector field $u_t^\theta$, number of steps $n$ / 神经网络向量场 $u_t^\theta$，步数 $n$
+\STATE Set $t=0$ / 设置 $t=0$
+\STATE Set step size $h=\frac{1}{n}$ / 设置步长 $h=\frac{1}{n}$
+\STATE Draw a sample $X_0\sim \pinit$ / 抽取样本 $X_0\sim \pinit$
 \FOR{$i=1,\dots,n-1$}
     \STATE $X_{t+h} = X_{t} + h u_t^\theta(X_t)$
-    \STATE Update $t\leftarrow t+h$
+    \STATE Update $t\leftarrow t+h$ / 更新 $t\leftarrow t+h$
 \ENDFOR
 \RETURN $X_1$
 \end{algorithmic}
@@ -235,7 +236,7 @@ In \cref{fig:brownian_motion_trajectories}, we plot a few example trajectories o
          % % \includegraphics[width=0.22\textwidth]{assets/flow_velocity/flow_v_14.png} &
          % \includegraphics[width=0.3\textwidth]{fm_guide_assets/flow_16.png} 
     \end{tabular}
-    \caption{\label{fig:bm_ou_process} Illustration of Ornstein-Uhlenbeck processes (\cref{eq:ohrstein_uhlenbeck_process}) in dimension $d=1$ for $\theta=0.25$ and various choices of $\sigma$ (increasing from left to right). For $\sigma=0$, we recover a flow (smooth, deterministic trajectories) that converges to the origin as $t \to \infty$. For $\sigma>0$ we have random paths which converge towards the Gaussian $\mathcal{N}(0,\frac{\sigma^2}{2\theta})$ as $t\to\infty$.}
+    \caption{Ornstein-Uhlenbeck过程（\cref{eq:ohrstein_uhlenbeck_process}）在维度$d=1$、$\theta=0.25$和各种$\sigma$选择（从左到右递增）下的图示。对于$\sigma=0$，我们恢复了一个当$t \to \infty$时收敛到原点的流（光滑、确定性轨迹）。对于$\sigma>0$，我们有随机路径，当$t\to\infty$时收敛到高斯分布$\mathcal{N}(0,\frac{\sigma^2}{2\theta})$。}
 \end{figure} 
 
 \paragraph{From ODEs to SDEs.} The idea of an SDE is to extend the deterministic dynamics of an ODE by adding stochastic dynamics driven by a Brownian motion. Because everything is stochastic, we may no longer take the derivative as in \cref{e:ode_ode}. Hence, we need to find an \textbf{equivalent formulation of ODEs that does not use derivatives}. For this, let us therefore rewrite trajectories $(X_t)_{0\leq t\leq 1}$ of an ODE as follows:
@@ -257,12 +258,6 @@ where $\sigma_t\geq 0$ describes the \themebf{diffusion coefficient} and $R_t(h)
     \end{align}
 \end{subequations}
 However, always keep in mind that the "$\dd X_t$"-notation above is a purely informal notation of \cref{e:infinitesimal_updates_sdes}. Unfortunately, SDEs do not have a flow map $\phi_t$ anymore. This is because the value $X_t$ is not fully determined by $X_0\sim \pinit$ anymore as the evolution itself is stochastic. Still, in the same way as for ODEs, we have:
-\begin{theorem}[SDE Solution Existence and Uniqueness]
-\label{thm:sde_existence_and_uniqueness}
-If $u:\R^d\times[0,1]\to\R^d$ is continuously differentiable with a bounded derivative and $\sigma_t$ is continuous, then the SDE in \eqref{e:sde_generic} has a solution given by the unique stochastic process $(X_t)_{0\leq t\leq 1}$ satisfying \cref{e:infinitesimal_updates_sdes}.
-\end{theorem}
-If this was a stochastic calculus class, we would spend several lectures proving this theorem and constructing SDEs with full mathematical rigor, i.e. constructing a Brownian motion from first principles and constructing the process $X_{t}$ via \themebf{stochastic integration}. As we focus on machine learning in this class, we refer to \citep{mao2007stochastic} for a more technical treatment. Finally, note that every ODE is also an SDE - simply with a vanishing diffusion coefficient $\sigma_t=0$. Therefore, for the remainder of this class, \textbf{when we speak about SDEs, we consider ODEs as a special case}.
-
 \paragraph{从ODEs到SDEs。} SDE的思想是通过添加由布朗运动驱动的随机动力学来扩展ODE的确定性动力学。因为一切都是随机的，我们不能再像\cref{e:ode_ode}中那样取导数。因此，我们需要找到\textbf{不使用导数的ODEs等价表述}。为此，让我们将ODE的轨迹$(X_t)_{0\leq t\leq 1}$重写如下：
 \begin{alignat*}{3}
     \frac{\dd}{\dd t} X_t &=  u_t(X_t) \quad &&\blacktriangleright\,\,\text{通过导数表达}\\
@@ -281,8 +276,14 @@ If this was a stochastic calculus class, we would spend several lectures proving
     \end{align}
 \end{subequations}
 但是，请始终记住上面的"$\dd X_t$"记号只是\cref{e:infinitesimal_updates_sdes}的纯粹非正式记号。不幸的是，SDEs不再有流映射$\phi_t$。这是因为$X_t$的值不再完全由$X_0\sim \pinit$确定，因为演化本身是随机的。尽管如此，与ODEs相同的方式，我们有：
+\begin{theorem}[SDE Solution Existence and Uniqueness]
+    
+\label{thm:sde_existence_and_uniqueness}
+If $u:\R^d\times[0,1]\to\R^d$ is continuously differentiable with a bounded derivative and $\sigma_t$ is continuous, then the SDE in \eqref{e:sde_generic} has a solution given by the unique stochastic process $(X_t)_{0\leq t\leq 1}$ satisfying \cref{e:infinitesimal_updates_sdes}.
+\\如果$u:\R^d\times[0,1]\to\R^d$是连续可微的且有有界导数，$\sigma_t$是连续的，那么\eqref{e:sde_generic}中的SDE有一个解，由满足\cref{e:infinitesimal_updates_sdes}的唯一随机过程$(X_t)_{0\leq t\leq 1}$给出。
+\end{theorem}
+If this was a stochastic calculus class, we would spend several lectures proving this theorem and constructing SDEs with full mathematical rigor, i.e. constructing a Brownian motion from first principles and constructing the process $X_{t}$ via \themebf{stochastic integration}. As we focus on machine learning in this class, we refer to \citep{mao2007stochastic} for a more technical treatment. Finally, note that every ODE is also an SDE - simply with a vanishing diffusion coefficient $\sigma_t=0$. Therefore, for the remainder of this class, \textbf{when we speak about SDEs, we consider ODEs as a special case}.
 
-如果$u:\R^d\times[0,1]\to\R^d$是连续可微的且有有界导数，$\sigma_t$是连续的，那么\eqref{e:sde_generic}中的SDE有一个解，由满足\cref{e:infinitesimal_updates_sdes}的唯一随机过程$(X_t)_{0\leq t\leq 1}$给出。
 
 如果这是随机微积分课程，我们会花几节课来证明这个定理并以完全的数学严格性构造SDEs，即从第一原理构造布朗运动并通过\themebf{随机积分}构造过程$X_{t}$。由于我们在这门课中专注于机器学习，我们参考\citep{mao2007stochastic}以获得更技术性的处理。最后，注意每个ODE也是SDE——只是扩散系数$\sigma_t=0$消失了。因此，在本课程的其余部分，\textbf{当我们谈论SDEs时，我们将ODEs视为特殊情况}。
 % \begin{remarkbox}[A Note on Formality]
@@ -319,17 +320,17 @@ where $h=n^{-1}>0$ is a step size hyperparameter for $n \in \Nat$. In other word
 其中$h=n^{-1}>0$是$n \in \Nat$的步长超参数。换句话说，要使用Euler-Maruyama方法进行模拟，我们沿$u_t(X_t)$方向迈出一小步，并添加一点由$\sqrt{h}\sigma_t$缩放的高斯噪声。在本课程中模拟SDEs时（例如在随附的实验中），我们通常会坚持使用Euler-Maruyama方法。
 
 \begin{algorithm}[h]
-\caption{Sampling from a Diffusion Model (Euler-Maruyama  method)}
+\caption{Sampling from a Diffusion Model (Euler-Maruyama method) / 使用Euler-Maruyama方法从扩散模型采样}
 \label{alg:sampling_diffusion_model}
 \begin{algorithmic}[1]
-\REQUIRE Neural network $u_t^\theta$, number of steps $n$, diffusion coefficient $\sigma_t$
-\STATE Set $t=0$
-\STATE Set step size $h=\frac{1}{n}$
-\STATE Draw a sample $X_0\sim \pinit$
+\REQUIRE Neural network $u_t^\theta$, number of steps $n$, diffusion coefficient $\sigma_t$ / 神经网络 $u_t^\theta$，步数 $n$，扩散系数 $\sigma_t$
+\STATE Set $t=0$ / 设置 $t=0$
+\STATE Set step size $h=\frac{1}{n}$ / 设置步长 $h=\frac{1}{n}$
+\STATE Draw a sample $X_0\sim \pinit$ / 抽取样本 $X_0\sim \pinit$
 \FOR{$i=1,\dots,n-1$}
-    \STATE Draw a sample $\epsilon\sim \mathcal{N}(0,I_d)$
+    \STATE Draw a sample $\epsilon\sim \mathcal{N}(0,I_d)$ / 抽取样本 $\epsilon\sim \mathcal{N}(0,I_d)$
     \STATE $X_{t+h} = X_{t} + h u_t^\theta(X_t)+\sigma_t\sqrt{h}\epsilon$
-    \STATE Update $t\leftarrow t+h$
+    \STATE Update $t\leftarrow t+h$ / 更新 $t\leftarrow t+h$
 \ENDFOR
 \RETURN $X_1$
 \end{algorithmic}
